crates/reinhardt-db-macros/tests/ui/fail/unsupported_backend.rs
//! Unsupported backend should fail

use reinhardt_db_macros::document;

#[document(collection = "users", backend = "redis")]
struct User {
	id: String,
}

fn main() {}
